[package]
name = "bevy_marching_cubes"
version = "0.3.0"
edition = "2024"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
async-channel = "2.5.0"
bevy = { version = "0.17", default-features = false, features = [
	"bevy_render",
] }

[dev-dependencies]
bevy = { version = "0.17", features = ["track_location"] }
bevy_panorbit_camera = "0.29"

[lib]
name = "bevy_marching_cubes"
path = "src/lib.rs"
